--- a/static/content.yaml
+++ b/static/content.yaml
@@ -106,7 +106,7 @@ Basic 4:
 - Open Cross-Body:
   - https://photos.google.com/photo/AF1QipPBRCnQemQr-LaK4ChYzIo5dx6N0tV7lcUUBFiF
 - Guapea:
-  - https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0
+  - ''
 - Basic Pizza:
   - https://photos.google.com/photo/AF1QipM9rFCjfr14UFaQsvzA_5sZw3hAVH7PHAt_0SX1
   - https://photos.google.com/photo/AF1QipPet4L7-JIL_H65YjDXS3Nmo7keUuxWsDJ3ASYi
@@ -116,7 +116,7 @@ Basic 4:
 - Shoulder stop:
   - https://photos.google.com/photo/AF1QipNAlzmxlMjfNrjmkaX-crNwqW6FROikASqofkt1
 - Guapea with tap and kick:
-  - ''
+  - 'https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0'
 - Titanic:
   - https://photos.google.com/photo/AF1QipPcrrBSAW9-5c7bzTfN2BULcTxHM8NY08iezIx7
   - https://photos.google.com/photo/AF1QipOwsnQkVC-UAYB1ZKKFrefdPGeJuY-Ojy4hgs-7
@@ -166,13 +166,14 @@ Intermediate 1:
   - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
 - Double Turn:
   - https://photos.google.com/photo/AF1QipOzeUrSTiPUk-Gp138JoqZ_pWKyXM4uO_IkduV_
-- Caracoll:
+- Caracol:
   - https://photos.google.com/photo/AF1QipNBVWzq6n0xwSN3uCtPUTNw97MHKXedJ7nMa4sV
   - https://photos.google.com/photo/AF1QipNOwX_96sSKOfPCX8RCfhGjqsPfVDXaRxJUI6Uj
   - https://photos.google.com/photo/AF1QipNybM9h6J1lOhuYK6TzvYARC9Z67dCkCL9b5Kqi
   - https://photos.google.com/photo/AF1QipNt_yMyUQ8aPn6yu-AWKxMs4bed2-ykqNgDbfiB
   - https://photos.google.com/photo/AF1QipPet4L7-JIL_H65YjDXS3Nmo7keUuxWsDJ3ASYi
   - https://photos.google.com/photo/AF1QipOp0HyfIiZ7FlnsuKgHI1Bo2dLOj-GRFxGVN4No
+  - https://photos.google.com/photo/AF1QipPqTLNjYHb9GwSZUt8kUsVez9XfArMlvcEyvOJ-
 - Full Side turn / El lado turn:
   - ''
 - Drop n catch:
