Added content + error handling

--- a/static/content.yaml
+++ b/static/content.yaml
@@ -8,7 +8,7 @@ Basic 1:
   - https://photos.google.com/photo/AF1QipP9CxAsf_-PX8y7zgLJsmKhp5FmoJ3-Ff0WYguT
 - Anastasia Variation:
   - https://photos.google.com/photo/AF1QipMTDhHJOP01tjZeiDxx1VJPfHAl4NaCCy4QHb_r
-- Left turn:
+- Right turn:
   - https://photos.google.com/photo/AF1QipPHh1Tw0tda7kjPque33804evPTssPYExutG5M6
 - Macho step, right turn:
   - ''
@@ -80,6 +80,7 @@ Basic 3:
   - https://photos.google.com/photo/AF1QipM7_Omnjb5HIz2bBKOST9xNnR6QBLKCwDPljgLP
 - Outside Turn (alone):
   - https://photos.google.com/photo/AF1QipNhxIpaEsxsN_gqUiJnF3qFPETwWBk_ruLwhC3b
+  - https://photos.google.com/photo/AF1QipMJmKv4PNonvyoR0tBXkaom16Mat2FakzQh1YkY
 - Sedenta + hook:
   - https://photos.google.com/photo/AF1QipM1onJaGjEQgOlv80wN0PJ6huugWZGk7j9sWrDp
 - Sedenta + left turn:
@@ -88,6 +89,7 @@ Basic 3:
 - Outside Turn (partnerwork):
   - https://photos.google.com/photo/AF1QipM8C16uLw4GqBxa3FJBpPmT5tRi0BxNM8nGLfnU
   - https://photos.google.com/photo/AF1QipPfHsN8s1DBWJ6VOE4d3dHKz0Fa2w36sITofQvs
+  - https://photos.google.com/photo/AF1QipM_OUJ8bfL1PArEgTYG-8jQvYgAGYWQV8K5iR4A
 - Side Suzy Q:
   - https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
 - Shoulder neck:
@@ -133,6 +135,10 @@ Basic 4:
   - https://photos.google.com/photo/AF1QipPBcPFQDsxfqJSIZlDMgm4JwCb-j0meeVvd5viK
   - https://photos.google.com/photo/AF1QipMHPYTDElcxODvYlIO3BhRCjnxe6MK8UaZuVmzi
   - https://photos.google.com/photo/AF1QipO8jGzn-cAofgNBY_cOu6LRei8WzRB10k5eJWLk
+  - https://photos.google.com/photo/AF1QipPJ4sJEy0GaxYySLIovA-rk0IYO_jYiAtciCbA4
+  - https://photos.google.com/photo/AF1QipNVJOPIvf320puf3vJgo_tmdUrDIdyDg0IkAy9r
+  - https://photos.google.com/photo/AF1QipNkDL54mQ6m31K4AF6RSvSgU_sRwyZN2PatNK43
+  - https://photos.google.com/photo/AF1QipPuGrcjq8Uk24Gjmw_J9SnBCGoWBPdcZxSTWkXI
 - Suzy Q lapas:
   - https://photos.google.com/photo/AF1QipMHV4OqJeWcAK7JZ55ATwo6WoCo8-7VubRFH09b
   - https://photos.google.com/photo/AF1QipNybM9h6J1lOhuYK6TzvYARC9Z67dCkCL9b5Kqi
@@ -174,19 +180,17 @@ Intermediate 1:
   - https://photos.google.com/photo/AF1QipPet4L7-JIL_H65YjDXS3Nmo7keUuxWsDJ3ASYi
   - https://photos.google.com/photo/AF1QipOp0HyfIiZ7FlnsuKgHI1Bo2dLOj-GRFxGVN4No
   - https://photos.google.com/photo/AF1QipPqTLNjYHb9GwSZUt8kUsVez9XfArMlvcEyvOJ-
-- Full Side turn / El lado turn:
-  - ''
-- Drop n catch:
-  - https://photos.google.com/photo/AF1QipPJ4sJEy0GaxYySLIovA-rk0IYO_jYiAtciCbA4
-  - https://photos.google.com/photo/AF1QipNVJOPIvf320puf3vJgo_tmdUrDIdyDg0IkAy9r
-  - https://photos.google.com/photo/AF1QipNkDL54mQ6m31K4AF6RSvSgU_sRwyZN2PatNK43
-  - https://photos.google.com/photo/AF1QipPuGrcjq8Uk24Gjmw_J9SnBCGoWBPdcZxSTWkXI
+- Half Left Half Right:
+  - 'https://photos.google.com/photo/AF1QipPokJ1cEnsey6o5o6CL9ZnS6z9hPiHLspOHjx-Q'
+- Sedenta con wrap:
+  - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
+  - https://photos.google.com/photo/AF1QipNCFOoXROtys1D91gFMkNRQXAOuSyHu9B783w-2
 - Double Turn (alone):
   - 
 - Double Turn (partnerwork):
-  - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8
-- '':
-  - ''
+  - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8S
+- Magic:
+  - https://photos.google.com/photo/AF1QipNq5qGVcVEn9iSOfO91EfRI4keJnfOCd7-Vn3jT
 # ======= INT 2 ==================================================================
 Intermediate 2:
 - Double Walk (alone):
@@ -199,6 +203,11 @@ Intermediate 2:
   - https://photos.google.com/photo/AF1QipMz79vgHPAUR3nI3oBAKCPzdZPuaLKeHkPQZ1nW
   - https://photos.google.com/photo/AF1QipP-70_zlj9Mk13g9c0QFI50ierMyS4RYgjIyWva
   - https://photos.google.com/photo/AF1QipNzIlG6OrGjs5U37GQ8732jA0ELHOGOS0KCzGzq
+  - https://photos.google.com/photo/AF1QipPv3FVrAY86vafE8m01EI9fzppmtuc9ARISB7mJ
+- '':
+  - ''
+- Double Walk and Go:
+  - https://photos.google.com/photo/AF1QipN0K8SZBedHj9XyiFqa-yFfg863KGXZD0ZsVO-P
 - V-Step:
   - https://photos.google.com/photo/AF1QipMaYjiQWO1XyCvROcdLmUExbFpR680w_u2qbT7M
   - https://photos.google.com/photo/AF1QipMNI5t8TIV42NYwRFd3GFp3ZOC9w6znPbL7ryMG
@@ -210,11 +219,6 @@ Intermediate 2:
   - https://photos.google.com/photo/AF1QipO-GE9Ei_98yYwRf2dezabu6WGbv1zNf1o5ROJ4
 - Don Simon v2:
   - https://photos.google.com/photo/AF1QipNCNQmMlibjZ2pRt_58pcb4G7NTFSkhBMDa5I8Z
-- Half Left Half Right:
-  - 'https://photos.google.com/photo/AF1QipPokJ1cEnsey6o5o6CL9ZnS6z9hPiHLspOHjx-Q'
-- Sedenta con wrap:
-  - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
-  - https://photos.google.com/photo/AF1QipNCFOoXROtys1D91gFMkNRQXAOuSyHu9B783w-2
 - Cross Tap:
   - https://photos.google.com/photo/AF1QipNamKB5IBVBjcBRQeY3rVFR5JADm0PoNkyBEXwv
 - Double Turn Basic:
@@ -324,10 +328,19 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipMxT4MqyojlU8iKvW2bWJcJAKR_i7Jr4SAvsz1N
 # ======= ADV 2 ==================================================================
 Advanced 2:
-- Togoman:
+- Togoman v1:
+  - ''
+- Ciego:
+  - 'https://photos.google.com/photo/AF1QipP5ppxsCvGIxFkXsdUWI04s3GsXLOOnxfz168SW'  
+- Togoman v2:
   - https://photos.google.com/photo/AF1QipOeXSbijufJUXnu9zMW9RJeP3O49YStgUo2a-qU
 - Torremolinas:
   - https://photos.google.com/photo/AF1QipM0b36G48pGotg_gXxKOZ5w1Pu5lD7-BJ4_pEr7
+  - https://photos.google.com/photo/AF1QipMJHo0NiS71HDlxijnDJBv5UNvdELU8mZfygXFc
+- Togoman v3:
+ - https://photos.google.com/photo/AF1QipPH4mcoFps9mrHG2oke2fe3YrP0AaWjEIqjSVKm
+- Ciego + Torremolinas:
+  - https://photos.google.com/photo/AF1QipPbyU4Qcj2POQSLePlr4Q73CxXn_CkF3pfJ8puL
 # ======= ADV 3 ==================================================================
 Advanced 3: []
 # ======= ADV 4 ==================================================================
@@ -342,6 +355,8 @@ Master 3: []
 Master 4: []
 # ======= OTHERS ==============================================================
 Other Classes:
+ - 2023-04-14 Adv. Clus:
+   - https://photos.google.com/photo/AF1QipM7113zN51VpG_UrdumrDm3GzJtfcxLGRD-kH5m
  - 2023-04-06 Int. Club:
    - https://photos.google.com/photo/AF1QipPVRVwnclLzTEC9mnapkdA0U0VQnWr27AhQi8fO
  - '':
@@ -365,6 +380,14 @@ Other Classes:
  
 # ==== WORKSHOPS ==============================================================
 Workshops:
+- Musicaliy (Terri & Cecile at PISC23):
+  - https://photos.google.com/photo/AF1QipMd7rMgW1BsAyPiguD0x-04QvPu73-YZsTRsjaJ
+- Calle Vapoor - Negra Tomasa:
+  - https://photos.google.com/photo/AF1QipPMIgl3biBY8GpbWxznV4-5GwBtHuorF4LLm63r  
+- Afro-Mambo (PISC23):
+  - https://photos.google.com/photo/AF1QipOTRz_FbXIXeHRyfGr5GDXT20HgX52qIJKBd4Kt
+- With music:
+  - https://photos.google.com/photo/AF1QipNAsUIAMHFCKmjSi3IV-EC1SyawdRuLCxhSxCs5
 - Footwork on-1 2023 (Panagiotis&Myrto):
   - https://photos.google.com/photo/AF1QipOp5BbIAt1LYhngqlCLoUWEZvqI02BcYIrsOkr3
 - With music:
@@ -461,5 +484,10 @@ Pasitos:
   - ''
 - Pasitos:
   - https://photos.google.com/photo/AF1QipMJ97Qg94CUh6AxXtjHGuRxWLlBEthbzzOUKYf2
+- '':
+  - ''
+Recordings:
+- "2023-04-14":
+  - https://photos.google.com/photo/AF1QipNvBJDlMq6s6mrSHv5O2wCJGg2acO4UZC-EG-2G
 - '':
   - ''
