Moved the content to the docs folder

--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -73,8 +73,8 @@ Basic 3:
   - https://photos.google.com/photo/AF1QipPPKWaqC3vsSniyfNOYVeh1tE-p5fpjko2rspqt
   Shoulder out:
   - https://photos.google.com/photo/AF1QipNSNa1xr0lWVglgB-reaXYxyOuJ0Z9A7alcprPi
-- footwork:
-  - ''
+- Open Inside Turn (partnerwork):
+  - https://photos.google.com/photo/AF1QipOcmPqqtMbZF-9Zz0T2KVzSlebU7rtt35mLr3K6
 - Sedenta:
   - https://photos.google.com/photo/AF1QipP7paD45P5kXar-Dw4UBE0iMBg7Zli97mneux6N
   - https://photos.google.com/photo/AF1QipM7_Omnjb5HIz2bBKOST9xNnR6QBLKCwDPljgLP
@@ -116,6 +116,7 @@ Basic 4:
 - Guapea with tap:
   - ''
 - Shoulder stop:
+  - https://photos.google.com/photo/AF1QipPy6uRDOBPN5nvpqMGsuTgrb_j_em_VaNDHmB9M
   - https://photos.google.com/photo/AF1QipNAlzmxlMjfNrjmkaX-crNwqW6FROikASqofkt1
 - Guapea with tap and kick:
   - 'https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0'
@@ -361,8 +362,16 @@ Master 3: []
 Master 4: []
 # ======= OTHERS ==============================================================
 Other Classes:
- - 2023-04-14 Adv. Clus:
+ - 2023-04-20 Adv. Club Footwork:
+   - https://photos.google.com/photo/AF1QipOlmGzY39VWEoukMhZB_wXA5L9U8yZTjJYQ2vBS
+ - 2023-04-20 Adv. Club Partnerwork:
+   - https://photos.google.com/photo/AF1QipOlmGzY39VWEoukMhZB_wXA5L9U8yZTjJYQ2vBS
+ - '':
+   - ''
+ - 2023-04-14 Adv. Club:
    - https://photos.google.com/photo/AF1QipM7113zN51VpG_UrdumrDm3GzJtfcxLGRD-kH5m
+ - '':
+   - ''   
  - 2023-04-06 Int. Club:
    - https://photos.google.com/photo/AF1QipPVRVwnclLzTEC9mnapkdA0U0VQnWr27AhQi8fO
  - '':
@@ -381,8 +390,7 @@ Other Classes:
    - ''
  - 2023-02-28 Intensive Week - Body movement:
    - https://photos.google.com/photo/AF1QipPNY1cVXUTothVWPDDh5tCWlhphGXEOuceQsvU0
- - '':
-   - ''
+
  
 # ==== WORKSHOPS ==============================================================
 Workshops:
