--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -190,6 +190,8 @@ Intermediate 1:
   - 
 - Double Turn (partnerwork):
   - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8S
+- Wrapped Copa:
+  - https://photos.google.com/photo/AF1QipMocNj3xsNFSCeZJwgUMJDjiIBc4z_wr7gKVQjv
 - Magic:
   - https://photos.google.com/photo/AF1QipNq5qGVcVEn9iSOfO91EfRI4keJnfOCd7-Vn3jT
 # ======= INT 2 ==================================================================
