--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -182,14 +182,16 @@ Intermediate 1:
   - https://photos.google.com/photo/AF1QipOp0HyfIiZ7FlnsuKgHI1Bo2dLOj-GRFxGVN4No
   - https://photos.google.com/photo/AF1QipPqTLNjYHb9GwSZUt8kUsVez9XfArMlvcEyvOJ-
 - Half Left Half Right:
-  - 'https://photos.google.com/photo/AF1QipPokJ1cEnsey6o5o6CL9ZnS6z9hPiHLspOHjx-Q'
+  - https://photos.google.com/photo/AF1QipPokJ1cEnsey6o5o6CL9ZnS6z9hPiHLspOHjx-Q
 - Sedenta con wrap:
   - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
   - https://photos.google.com/photo/AF1QipNCFOoXROtys1D91gFMkNRQXAOuSyHu9B783w-2
 - Double Turn (alone):
-  - 
+  - ""
 - Double Turn (partnerwork):
-  - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8S
+  - https://photos.google.com/photo/AF1QipMz6zNmDLLvjrugk-EiKV44Yp025LBZ1KNIIpx8
+- Int1. Choreo:
+  - https://photos.google.com/photo/AF1QipO0hic84zeSuzC60-1KrJuaRflMlFmkgP7kKGHP
 - Wrapped Copa:
   - https://photos.google.com/photo/AF1QipMocNj3xsNFSCeZJwgUMJDjiIBc4z_wr7gKVQjv
 - Magic:
