--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -355,6 +355,10 @@ Advanced 2:
   - https://photos.google.com/photo/AF1QipPH4mcoFps9mrHG2oke2fe3YrP0AaWjEIqjSVKm
 - Ciego + Torremolinas:
   - https://photos.google.com/photo/AF1QipPbyU4Qcj2POQSLePlr4Q73CxXn_CkF3pfJ8puL
+- Togoman Full:
+  - https://photos.google.com/photo/AF1QipMsWQR8v8fbBPukxY_OP5yCaDcuE7YJKN-7u571
+- Enshufla Turn:
+  - https://photos.google.com/photo/AF1QipOIkVzX_PKWANJu3hqA9soPEHfSAtny-gphqPU4
 # ======= ADV 3 ==================================================================
 Advanced 3: []
 # ======= ADV 4 ==================================================================
