--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -405,31 +405,37 @@ Other Classes:
  
 # ==== WORKSHOPS ==============================================================
 Workshops:
-- Musicaliy (Terri & Cecile at PISC23):
+- <b>PARIS 2023</b>: [''] # ---------------------------------------------------
+- '': ['']
+- Musicaliy (Terri & Cecile):
   - https://photos.google.com/photo/AF1QipMd7rMgW1BsAyPiguD0x-04QvPu73-YZsTRsjaJ
 - Calle Vapoor - Negra Tomasa:
   - https://photos.google.com/photo/AF1QipPMIgl3biBY8GpbWxznV4-5GwBtHuorF4LLm63r  
-- Afro-Mambo (PISC23):
+- Afro-Mambo:
   - https://photos.google.com/photo/AF1QipOTRz_FbXIXeHRyfGr5GDXT20HgX52qIJKBd4Kt
 - With music:
   - https://photos.google.com/photo/AF1QipNAsUIAMHFCKmjSi3IV-EC1SyawdRuLCxhSxCs5
-- Footwork on-1 2023 (Panagiotis&Myrto):
+- <b>PANAGIOTIS & MYRTO 2023</b>: ['']  # ----------------------------------------------
+- '': ['']
+- Footwork on-1 2023:
   - https://photos.google.com/photo/AF1QipOp5BbIAt1LYhngqlCLoUWEZvqI02BcYIrsOkr3
 - With music:
   - https://photos.google.com/photo/AF1QipPYdUPsodqwCRNKRBkBzZZ-6avCRpeacnOI8a_V
-- Partnerwork on-1 2023/2 (Panagiotis&Myrto):
+- Partnerwork on-1 2023/2:
   - https://photos.google.com/photo/AF1QipPYAnjsbxSX3BP3PY4sV-zGj2PQbsFD1Gbk2iZc
 - With music:
   - https://photos.google.com/photo/AF1QipOp6UQWaHbo9EySCa-TbPk4Wv9vOfWXN5BHgoQh
-- Partnerwork on-1 2023/1 (Panagiotis&Myrto):
+- Partnerwork on-1 2023/1:
   - https://photos.google.com/photo/AF1QipO59Zg6HQ5PanfPvikKfJ_Ku2Acqn0fsWQmV_gH
 - With music:
   - https://photos.google.com/photo/AF1QipN8htOcX8F2mMdJO_av7pvqYAX27cSDNcpYHfbC
-- Foorwork on-2 2023 (Panagiotis&Myrto):
+- Foorwork on-2 2023:
   - https://photos.google.com/photo/AF1QipMjNScPgblG3UAFlpDADuw4KiTpRg29sxce4IOe
 - With music:
   - https://photos.google.com/photo/AF1QipP698CRpTIAexQqBK_hFLG6y1fy2nFACa-FL_8l
-- Basic Pachanga Workshop:
+- <b>ISTANBUL 2023</b>: [''] # -------------------------------------------------
+- '': ['']
+- Istanbul23 Basic Pachanga Workshop:
   - https://photos.google.com/photo/AF1QipNkHu1Z3X9ecdE6-vSVWQq_DY1JFXnJxyCVrJ_3
 - Seo Fernandez - Llegò la Pachanga:
   - https://photos.google.com/photo/AF1QipNCTnpOS9skeNn6y8tb4vxSfmPDK7sEoTDkQkV7
@@ -450,13 +456,34 @@ Workshops:
 - DJ RaFF - La tristeza de invierno:
   - https://photos.google.com/photo/AF1QipPjG_tTlCvmzbj_ftCNSJdEyOo_i2gzQbbgdblz
 - Salsa Musicality Workshop (Angelo Rito):
-  - https://photos.google.com/photo/AF1QipM1W4vYXto9jG6oWonESikIkgxCzg6P8h5LHdbG
-- '':
-  - ''
+  - https://photos.google.com/photo/AF1QipM1W4vYXto9jG6oWonESikIkgxCzg6P8h5LHdbG---------------------------
+- '': ['']
 - Salsa Musicality Bootcamp (Angelo Rito):
   - https://photos.google.com/photo/AF1QipNyCy4Mn29tqnlYKDomgC-Kkzc_MHY7HFOoUIsv
 - Alfredo Rodriguez Duologue:
   - https://photos.google.com/photo/AF1QipNpRewDuhvKaVaMhie1nHKrINF9artY2OxOQ1Xl
+- <b>WARSAW SPRING 2023</b>: ['']  # -------------------------------------------------------------------------
+- '': ['']
+- Body Movement (Chiara Tofani): [https://photos.google.com/photo/AF1QipPBPi9CnYCJ6-nSc_xSpMaV4oLWVG4CUDZMmUU7]
+- With Music (Buena Vista - Chan Chan): [https://photos.google.com/photo/AF1QipNnkdA5tIxErQxlaVvR7DVZv1G2wHN4YE0rngND]
+- Spinning Class (Charlie & Brianna): [https://photos.google.com/photo/AF1QipPnHHEpLDt1HODenkA9tmxKJ74T7StQLb8lu07B]
+- Empire Mambo Website: [https://empiremambo.nyc/]
+- Mambo Fusion - Explanation (Chiara Tofani): [https://photos.google.com/photo/AF1QipOsFseX7M8IHwJ1BVm9f-NgucIDlmOITnyWWf7V]
+- Mambo Fusion - Counting (Chiara Tofani): [https://photos.google.com/photo/AF1QipNz3M3vZIvOdQ9Tpf2UFdD7IvRVsIMS6tTmjxfv]
+- Mambo Fusion - Music (Chiara Tofani): [https://photos.google.com/photo/AF1QipPZthmv2moPfSDXMS2ltBsaN1fY6ZEexRR4dW9q]
+- '': ['']
+- Adv. Combo (Charlie & Brianna): [https://photos.google.com/photo/AF1QipNijU861jC_90wQ9jrzHEnI-xB82qECJmjAAvhb]
+- '': ['']
+- Afro Mambo (Shon): [https://photos.google.com/photo/AF1QipMu-m4TlnBH_p2o8IQQCiLCEqZ92S67RO3gSDFL]
+- Back w/Music (Pepe Fall - African Salsa): [https://photos.google.com/photo/AF1QipM063JFcFB3LUhPYBBb70xMQRA_bHfxXbvaPeft]
+- '': ['']
+- Front w/Music (Pepe Fall - African Salsa): [https://photos.google.com/photo/AF1QipNuNhKT9pqxbKBnqZWuWqWXKEx1iZg0L_R2gRET]
+- Counting (Charlie & Brianna): [https://photos.google.com/photo/AF1QipOobXfK70szZc2q0wR-uZKf-4u7An0zgpReDwvx]
+- Demo (Charlie & Brianna): [https://photos.google.com/photo/AF1QipNijU861jC_90wQ9jrzHEnI-xB82qECJmjAAvhb]
+- Pachanga (Shon): [https://photos.google.com/photo/AF1QipPGU2tpq7DxkZCzBhcbcjJ1s0PfAayXEyCx2hob]
+- Counting: [https://photos.google.com/photo/AF1QipMjbAXg6QRheRCO14fLXWJW34BhiqHd2tA4Aw9d]
+- Back w/Count: [https://photos.google.com/photo/AF1QipPTSHd0Tqetk-4pEOYgakOfmNlAzeSP_tgzjkKs]
+- Pachange w/Music: [https://photos.google.com/photo/AF1QipM8ERSa0JNuFNwgmNs2YsYUH3txSy1yeoepxrXf] 
 # === PASITOS ==============================================================
 Pasitos:
 - Left turn simplified:
@@ -512,7 +539,7 @@ Pasitos:
 - '':
   - ''
 Recordings:
-- "2023-04-21":
+- "2023-04-21 (Party)":
   - https://photos.google.com/photo/AF1QipNAe_82_y9fMVhyG48fVCjTWFOgtCl7pTcTBHhW
-- "2023-04-14":
+- "2023-04-14 (Practice)":
   - https://photos.google.com/photo/AF1QipNvBJDlMq6s6mrSHv5O2wCJGg2acO4UZC-EG-2G
