--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -539,7 +539,9 @@ Pasitos:
 - '':
   - ''
 Recordings:
-- "2023-04-21 (Party)":
-  - https://photos.google.com/photo/AF1QipNAe_82_y9fMVhyG48fVCjTWFOgtCl7pTcTBHhW
-- "2023-04-14 (Practice)":
-  - https://photos.google.com/photo/AF1QipNvBJDlMq6s6mrSHv5O2wCJGg2acO4UZC-EG-2G
+- "2023-04-21 Bailamos": [https://photos.google.com/photo/AF1QipOokdvR3dPQ5jERWPNZvBuhzDK99t4mpvol2KGj]
+- "": [""]
+- "2023-04-21 Party"   : [https://photos.google.com/photo/AF1QipNAe_82_y9fMVhyG48fVCjTWFOgtCl7pTcTBHhW]
+- "": [""]
+- "2023-04-14 Practice": [https://photos.google.com/photo/AF1QipNvBJDlMq6s6mrSHv5O2wCJGg2acO4UZC-EG-2G]
+- "": [""]
