Added Adv Club from 05-04

--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -373,6 +373,8 @@ Master 3: []
 Master 4: []
 # ======= OTHERS ==============================================================
 Other Classes:
+ - 2023-05-04 Adv. Club Partnerwork: [https://photos.google.com/photo/AF1QipPIofWPwjcfQGs6xvbVwkt6hHRV_dC7gOM-cXhy]
+ - 'Flick & Double Turn with takeover': ['']
  - 2023-04-20 Adv. Club Footwork:
    - https://photos.google.com/photo/AF1QipOlmGzY39VWEoukMhZB_wXA5L9U8yZTjJYQ2vBS
  - 2023-04-20 Adv. Club Partnerwork:
