--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -359,6 +359,10 @@ Advanced 2:
   - https://photos.google.com/photo/AF1QipMsWQR8v8fbBPukxY_OP5yCaDcuE7YJKN-7u571
 - Enshufla Turn:
   - https://photos.google.com/photo/AF1QipOIkVzX_PKWANJu3hqA9soPEHfSAtny-gphqPU4
+- Bojoman v1:
+  - https://photos.google.com/photo/AF1QipPcu3VwtcXdhhYzC0DcdkmGTdT_a4SV1ZyG7Xd6
+- El Blokado:
+  - https://photos.google.com/photo/AF1QipNJJNo1EWmC2nDxw_7eJjuHLONjYPDmh4JDBjbI
 # ======= ADV 3 ==================================================================
 Advanced 3: []
 # ======= ADV 4 ==================================================================
