Added some content

--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -329,7 +329,6 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipN8SwVqoBxMHZ4OoOIW-jLCYee-dawf9b5Yik79
 - Footwork repetition:
   - ''
-  
 - Footwork repetition:
   - ''
 - Tommorow Land:
@@ -344,27 +343,16 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipMxT4MqyojlU8iKvW2bWJcJAKR_i7Jr4SAvsz1N
 # ======= ADV 2 ==================================================================
 Advanced 2:
-- Togoman v1:
-  - ''
-- Ciego:
-  - 'https://photos.google.com/photo/AF1QipP5ppxsCvGIxFkXsdUWI04s3GsXLOOnxfz168SW'  
-- Togoman v2:
-  - https://photos.google.com/photo/AF1QipOeXSbijufJUXnu9zMW9RJeP3O49YStgUo2a-qU
-- Torremolinas:
-  - https://photos.google.com/photo/AF1QipM0b36G48pGotg_gXxKOZ5w1Pu5lD7-BJ4_pEr7
-  - https://photos.google.com/photo/AF1QipMJHo0NiS71HDlxijnDJBv5UNvdELU8mZfygXFc
-- Togoman v3:
-  - https://photos.google.com/photo/AF1QipPH4mcoFps9mrHG2oke2fe3YrP0AaWjEIqjSVKm
-- Ciego + Torremolinas:
-  - https://photos.google.com/photo/AF1QipPbyU4Qcj2POQSLePlr4Q73CxXn_CkF3pfJ8puL
-- Togoman Full:
-  - https://photos.google.com/photo/AF1QipMsWQR8v8fbBPukxY_OP5yCaDcuE7YJKN-7u571
-- Enshufla Turn:
-  - https://photos.google.com/photo/AF1QipOIkVzX_PKWANJu3hqA9soPEHfSAtny-gphqPU4
-- Bojoman v1:
-  - https://photos.google.com/photo/AF1QipPcu3VwtcXdhhYzC0DcdkmGTdT_a4SV1ZyG7Xd6
-- El Blokado:
-  - https://photos.google.com/photo/AF1QipNJJNo1EWmC2nDxw_7eJjuHLONjYPDmh4JDBjbI
+- Togoman v1: [""]
+- Ciego: [https://photos.google.com/photo/AF1QipP5ppxsCvGIxFkXsdUWI04s3GsXLOOnxfz168SW]
+- Togoman v2: [https://photos.google.com/photo/AF1QipOeXSbijufJUXnu9zMW9RJeP3O49YStgUo2a-qU]
+- Torremolinas: [https://photos.google.com/photo/AF1QipM0b36G48pGotg_gXxKOZ5w1Pu5lD7-BJ4_pEr7, https://photos.google.com/photo/AF1QipMJHo0NiS71HDlxijnDJBv5UNvdELU8mZfygXFc]
+- Togoman v3: [https://photos.google.com/photo/AF1QipPH4mcoFps9mrHG2oke2fe3YrP0AaWjEIqjSVKm]
+- Ciego + Torremolinas: [https://photos.google.com/photo/AF1QipPbyU4Qcj2POQSLePlr4Q73CxXn_CkF3pfJ8puL]
+- Togoman Full: [https://photos.google.com/photo/AF1QipMsWQR8v8fbBPukxY_OP5yCaDcuE7YJKN-7u571]
+- Enshufla Turn: [https://photos.google.com/photo/AF1QipOIkVzX_PKWANJu3hqA9soPEHfSAtny-gphqPU4]
+- Bojoman v1: [https://photos.google.com/photo/AF1QipPcu3VwtcXdhhYzC0DcdkmGTdT_a4SV1ZyG7Xd6]
+- El Blokado: [https://photos.google.com/photo/AF1QipNJJNo1EWmC2nDxw_7eJjuHLONjYPDmh4JDBjbI, https://photos.google.com/photo/AF1QipMmca-ToTwA1F9C5t5H40RJUYkm_zGAJbcm8AVM, https://photos.google.com/photo/AF1QipMNHEsDgXVZsqu77h5erTZwf0TSyCaOx8mZzM05]  
 # ======= ADV 3 ==================================================================
 Advanced 3: []
 # ======= ADV 4 ==================================================================
@@ -377,20 +365,20 @@ Master 2: []
 Master 3: []
 # ======= MST 4 ==================================================================
 Master 4: []
+# ======= On-2 Club ==============================================================
+On-2 Club:
+- "2023-05-11": ['']
+- Chicken Wing: [https://photos.google.com/photo/AF1QipMBxnsxrB9n5q7427Q0cJGic9mt24ZIAc83Mydc]
+- "2023-05-04": ['']
+- Flick & Double Turn: [https://photos.google.com/photo/AF1QipPIofWPwjcfQGs6xvbVwkt6hHRV_dC7gOM-cXhy]
+- "2023-04-20": ['']
+- Adv. Club Footwork: [https://photos.google.com/photo/AF1QipOlmGzY39VWEoukMhZB_wXA5L9U8yZTjJYQ2vBS]
+- "2023-04-20": ['']
+- Adv. Club Partnerwork: [https://photos.google.com/photo/AF1QipPWJUn9nD45Xwm2hrCjRxLn2ApkOxq2xLy73XeH]
+- '2023-04-14': ['']
+- Adv. Club: [https://photos.google.com/photo/AF1QipM7113zN51VpG_UrdumrDm3GzJtfcxLGRD-kH5m]
 # ======= OTHERS ==============================================================
 Other Classes:
- - 2023-05-04 Adv. Club Partnerwork: [https://photos.google.com/photo/AF1QipPIofWPwjcfQGs6xvbVwkt6hHRV_dC7gOM-cXhy]
- - 'Flick & Double Turn with takeover': ['']
- - 2023-04-20 Adv. Club Footwork:
-   - https://photos.google.com/photo/AF1QipOlmGzY39VWEoukMhZB_wXA5L9U8yZTjJYQ2vBS
- - 2023-04-20 Adv. Club Partnerwork:
-   - https://photos.google.com/photo/AF1QipOlmGzY39VWEoukMhZB_wXA5L9U8yZTjJYQ2vBS
- - '':
-   - ''
- - 2023-04-14 Adv. Club:
-   - https://photos.google.com/photo/AF1QipM7113zN51VpG_UrdumrDm3GzJtfcxLGRD-kH5m
- - '':
-   - ''   
  - 2023-04-06 Int. Club:
    - https://photos.google.com/photo/AF1QipPVRVwnclLzTEC9mnapkdA0U0VQnWr27AhQi8fO
  - '':
