--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -22,8 +22,8 @@ Basic 1:
   - https://photos.google.com/photo/AF1QipMFJP-5hopV1lV4LXptwqBQdN8UREk6v5TQbIem
 - Me and you:
   - ''
-- Combo repeat:
-  - ''
+- Basic 1 Mega Combo:
+  - https://photos.google.com/photo/AF1QipMFCY2MITxP8cjJgWYYpIxKR41M4Bjhi3zkWD4j
 - You and me:
   - https://photos.google.com/photo/AF1QipN_1UgPvcFL1gCZUTwOO_kW_9z6M8Pd6s-DXpDW 
   - https://photos.google.com/photo/AF1QipOkpmCAmo3eA_9aIZpvk-F7JOYEwixJHCm_ee7G
@@ -173,6 +173,7 @@ Intermediate 1:
   - https://photos.google.com/photo/AF1QipMYEkV3PdZOuEVM156ZW3HPInIgdUrB9Jb4frFl
 - Double Turn:
   - https://photos.google.com/photo/AF1QipOzeUrSTiPUk-Gp138JoqZ_pWKyXM4uO_IkduV_
+  - https://photos.google.com/photo/AF1QipPlf6yZDIblbUY-dSnk8-5JiRvzZ8FwyE-W8RZt
 - Caracol:
   - https://photos.google.com/photo/AF1QipNBVWzq6n0xwSN3uCtPUTNw97MHKXedJ7nMa4sV
   - https://photos.google.com/photo/AF1QipNOwX_96sSKOfPCX8RCfhGjqsPfVDXaRxJUI6Uj
@@ -209,8 +210,8 @@ Intermediate 2:
   - https://photos.google.com/photo/AF1QipP-70_zlj9Mk13g9c0QFI50ierMyS4RYgjIyWva
   - https://photos.google.com/photo/AF1QipNzIlG6OrGjs5U37GQ8732jA0ELHOGOS0KCzGzq
   - https://photos.google.com/photo/AF1QipPv3FVrAY86vafE8m01EI9fzppmtuc9ARISB7mJ
-- '':
-  - ''
+- 'Double Walk with Scoop':
+  - 'https://photos.google.com/photo/AF1QipPxijg8-RsHQ5Vxb7axdeXiDNPDnud3JvWOFPyQ'
 - Double Walk and Go:
   - https://photos.google.com/photo/AF1QipN0K8SZBedHj9XyiFqa-yFfg863KGXZD0ZsVO-P
 - V-Step:
@@ -317,6 +318,7 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipNTUujMaxdj7cwX-3YVOkdtJq3ACbZN0z-EuQoY
 - '': ['']
 - Gancho:
+  - https://photos.google.com/photo/AF1QipN88zWiS0ZiRHNHax_ako9XCg9nz3oFhgt9mwjP
   - https://photos.google.com/photo/AF1QipNTzyY1YW2lt0nyunUpKGPOATffZZZ7R6OUNKSM
 - '': ['']
 - Cambiasso:
@@ -325,6 +327,7 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipMBKaaRsDQjSyByGq1tlYlfV8FXrKqq9Inrm0nR
 - Suzy Turn:
   - https://photos.google.com/photo/AF1QipNMIIJu3P0DdIqJmoyflnzCCexOOcmGQcasSU7I
+  - https://photos.google.com/photo/AF1QipNJZ7odncbYBpIa9L_7ZgUYklISLFv1jjvuAfBo
 - Gancho + 360:
   - https://photos.google.com/photo/AF1QipN8SwVqoBxMHZ4OoOIW-jLCYee-dawf9b5Yik79
 - Footwork repetition:
@@ -367,6 +370,8 @@ Master 3: []
 Master 4: []
 # ======= On-2 Club ==============================================================
 On-2 Club:
+- "2023-05-25": ['']
+- "Magic Hands": ['https://photos.google.com/photo/AF1QipOIPeNT4VfX1HE0y5BsisghCGsIGJLboOWPZZQR']
 - "2023-05-11": ['']
 - Chicken Wing: [https://photos.google.com/photo/AF1QipMBxnsxrB9n5q7427Q0cJGic9mt24ZIAc83Mydc]
 - "2023-05-04": ['']
@@ -523,7 +528,7 @@ Pasitos:
 - Outside turn:
   - ''
 - Double turn:
-  - ''
+  - https://photos.google.com/photo/AF1QipPlf6yZDIblbUY-dSnk8-5JiRvzZ8FwyE-W8RZt
 - Double walk:
   - ''
 - half el lado turn:
