--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -18,6 +18,7 @@ Basic 1:
   - ''
 - Combo with Caress:
   - https://photos.google.com/photo/AF1QipOkpmCAmo3eA_9aIZpvk-F7JOYEwixJHCm_ee7G
+  - https://photos.google.com/photo/AF1QipNvYKlu00fEhZaMQrz8aDDMXmSDygd-Et4ez0V8
 - Combo:
   - https://photos.google.com/photo/AF1QipMFJP-5hopV1lV4LXptwqBQdN8UREk6v5TQbIem
 - Me and you:
@@ -41,6 +42,7 @@ Basic 2:
   - https://photos.google.com/photo/AF1QipNdnfFjtf9wIRSWpswjuygN1xr7glFgK4X99FlD
 - Left turn varition:
   - https://photos.google.com/photo/AF1QipNNvmnV8GjLBhwAiqum8JRQz11fkB9_AjBCDBfo
+  - https://photos.google.com/photo/AF1QipPpIUKZqkOQNVvNdvhb7sRqu8wQZK_DgrpFgA_n
 - Enschufla with left turn:
   - https://photos.google.com/photo/AF1QipOEfoVb_vYc4gRCoktEzNrfVoAkRaVC_Sl9JKOr
   - https://photos.google.com/photo/AF1QipN2ZRIQuY-u_rVMgzFpT0gvqIo_OYlJfz7NLHEh
@@ -58,7 +60,7 @@ Basic 2:
   - https://photos.google.com/photo/AF1QipN0v-itjdcy273vnLdgRHVY5bhGB8uK5cRJqaI9
   - https://photos.google.com/photo/AF1QipMgpQ5HdSZ6Ph6NZRdQfQYMNSjurW7cy9fqN4Nt
 - In-Out Step:
-  - ''
+  - https://photos.google.com/photo/AF1QipPk75t_vxVQQXVY1YDM2ko7uJJDKUr-OnJYmd0p
 - Enschufla Triple:
   - https://photos.google.com/photo/AF1QipNyMB4LvK5PbA5hFQdwu4UIhju8F3f2tfp51LNU
 # ======= BASIC 3 ==================================================================
@@ -140,6 +142,7 @@ Basic 4:
   - https://photos.google.com/photo/AF1QipNVJOPIvf320puf3vJgo_tmdUrDIdyDg0IkAy9r
   - https://photos.google.com/photo/AF1QipNkDL54mQ6m31K4AF6RSvSgU_sRwyZN2PatNK43
   - https://photos.google.com/photo/AF1QipPuGrcjq8Uk24Gjmw_J9SnBCGoWBPdcZxSTWkXI
+  - https://photos.google.com/photo/AF1QipPG4LcCq2Z2gBUWhLG-ZztG0rPoe0u0QGQt1HVX
 - Suzy Q lapas:
   - https://photos.google.com/photo/AF1QipMHV4OqJeWcAK7JZ55ATwo6WoCo8-7VubRFH09b
   - https://photos.google.com/photo/AF1QipNybM9h6J1lOhuYK6TzvYARC9Z67dCkCL9b5Kqi
@@ -357,7 +360,9 @@ Advanced 2:
 - Bojoman v1: [https://photos.google.com/photo/AF1QipPcu3VwtcXdhhYzC0DcdkmGTdT_a4SV1ZyG7Xd6]
 - El Blokado: [https://photos.google.com/photo/AF1QipNJJNo1EWmC2nDxw_7eJjuHLONjYPDmh4JDBjbI, https://photos.google.com/photo/AF1QipMmca-ToTwA1F9C5t5H40RJUYkm_zGAJbcm8AVM, https://photos.google.com/photo/AF1QipMNHEsDgXVZsqu77h5erTZwf0TSyCaOx8mZzM05]  
 # ======= ADV 3 ==================================================================
-Advanced 3: []
+Advanced 3:
+- Suzy Lu: [https://photos.google.com/photo/AF1QipPlrZuZ9NHEPr8Qi_ZZedethsW0cW_OXy2BI-NH]
+- Alira: [https://photos.google.com/photo/AF1QipNr0YPuN45O1fvExNhfX09PYKAX_Uok_p3DMwHd]
 # ======= ADV 4 ==================================================================
 Advanced 4: []
 # ======= MST 1 ==================================================================
@@ -487,60 +492,41 @@ Workshops:
 - Pachange w/Music: [https://photos.google.com/photo/AF1QipM8ERSa0JNuFNwgmNs2YsYUH3txSy1yeoepxrXf] 
 # === PASITOS ==============================================================
 Pasitos:
-- Left turn simplified:
-  - ''
-- Left turn:
-  - ''
-- parabrisas / back basic:
-  - ''
-- Double left turn:
-  - ''
-- Right turn:
-  - ''
-- Hook Turn:
-  - ''
-- Right turn + Hook Turn:
-  - ''
-- side step / el lado:
-  - ''
-- side cross / southern cross / el lado cruzado:
-  - ''
-- Suzy Q:
-  - ''
-- In-Out Suzy Q:
-  - ''
-- In-Out Step:
-  - ''
-- Suzy Q Lapas:
-  - ''
-- Side Suzy Q:
-  - ''
-- el lado Suzy Q :
-  - ''
-- Guapea:
-  - ''
-- Guapea with tap:
-  - ''
-- Guapea with tap and kick:
-  - ''
-- Inside turn:
-  - ''
-- Outside turn:
-  - ''
-- Double turn:
-  - https://photos.google.com/photo/AF1QipPlf6yZDIblbUY-dSnk8-5JiRvzZ8FwyE-W8RZt
-- Double walk:
-  - ''
-- half el lado turn:
-  - ''
-- full el lado turn:
-  - ''
+- Left turn simplified: ['']
+- Left turn: ['']
+- Left turn variation: ['https://photos.google.com/photo/AF1QipPpIUKZqkOQNVvNdvhb7sRqu8wQZK_DgrpFgA_n']
+- parabrisas / back basic: ['']
+- Double left turn: ['']
+- Right turn: ['']
+- Hook Turn: ['']
+- Right turn + Hook Turn: ['']
+- side step / el lado: ['']
+- side cross / southern cross / el lado cruzado: ['https://photos.google.com/photo/AF1QipM0LMgpaQ3Z9vPtL6B0cGhO781eLt8xZ1b9tCG1']
+- Suzy Q: ['']
+- In-Out Suzy Q: ['']
+- In-Out Step: ['https://photos.google.com/photo/AF1QipPk75t_vxVQQXVY1YDM2ko7uJJDKUr-OnJYmd0p']
+- Suzy Q Lapas: ['']
+- Side Suzy Q: ['']
+- el lado Suzy Q : ['']
+- Guapea: ['']
+- Guapea with tap: ['']
+- Guapea with tap and kick: ['']
+- Inside turn: ['']
+- Outside turn: ['']
+- Double turn: [https://photos.google.com/photo/AF1QipPlf6yZDIblbUY-dSnk8-5JiRvzZ8FwyE-W8RZt, https://photos.google.com/photo/AF1QipPlf6yZDIblbUY-dSnk8-5JiRvzZ8FwyE-W8RZt]
+- Double walk: ['']
+- half el lado turn: ['']
+- full el lado turn: ['']
+- Suzy Turn: [https://photos.google.com/photo/AF1QipNJZ7odncbYBpIa9L_7ZgUYklISLFv1jjvuAfBo]
+- Suzy Lu: [https://photos.google.com/photo/AF1QipPlrZuZ9NHEPr8Qi_ZZedethsW0cW_OXy2BI-NH]
 - Pasitos:
   - https://photos.google.com/photo/AF1QipMJ97Qg94CUh6AxXtjHGuRxWLlBEthbzzOUKYf2
 - '':
   - ''
 Recordings:
-- "2023-04-21 Bailamos": [https://photos.google.com/photo/AF1QipOokdvR3dPQ5jERWPNZvBuhzDK99t4mpvol2KGj]
+- "2023-05-28 Riverside" : [https://photos.google.com/photo/AF1QipOX6EqSJjtdqcuiy-khp-IoeqpXnXT37jVMgtbk]
+- "": [""]
+- "2023-04-22 Bailamos": [https://photos.google.com/photo/AF1QipOokdvR3dPQ5jERWPNZvBuhzDK99t4mpvol2KGj]
 - "": [""]
 - "2023-04-21 Party"   : [https://photos.google.com/photo/AF1QipNAe_82_y9fMVhyG48fVCjTWFOgtCl7pTcTBHhW]
 - "": [""]
