--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -376,7 +376,7 @@ Master 4: []
 # ======= On-2 Club ==============================================================
 On-2 Club:
 - "2023-06-08": ['']
-- "Double Inside + Double Turn with Scoon": ['https://photos.google.com/photo/AF1QipPg3Hfsg5RV9AIRXVeNulR3UGYqXGhFlqh5eoXv']
+- "Double Inside + Double Turn with Scoop": ['https://photos.google.com/photo/AF1QipPg3Hfsg5RV9AIRXVeNulR3UGYqXGhFlqh5eoXv']
 - "2023-06-01": ['']
 - "Magic Hands Extended": ['https://photos.google.com/photo/AF1QipM_TNa27ED_Jy8GGPvNDu8QscDV04DgQUkO9LRi']
 - "2023-05-25": ['']
