--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -364,6 +364,8 @@ Advanced 2:
 Advanced 3:
 - Suzy Lu: [https://photos.google.com/photo/AF1QipPlrZuZ9NHEPr8Qi_ZZedethsW0cW_OXy2BI-NH]
 - Alira: [https://photos.google.com/photo/AF1QipNr0YPuN45O1fvExNhfX09PYKAX_Uok_p3DMwHd]
+- Suzy Lu v2: [https://photos.google.com/photo/AF1QipNt71Bv1pZjxxgBakyNjDfwofeE__WJW8JBwQmy]
+- Alira v2: [https://photos.google.com/photo/AF1QipOyMiMFmTa_ED-KILwJTW3aY0a3tmKRuSLFM4Ty]
 # ======= ADV 4 ==================================================================
 Advanced 4: []
 # ======= MST 1 ==================================================================
