--- a/docs/content.yaml
+++ b/docs/content.yaml
@@ -120,6 +120,7 @@ Basic 4:
 - Shoulder stop:
   - https://photos.google.com/photo/AF1QipPy6uRDOBPN5nvpqMGsuTgrb_j_em_VaNDHmB9M
   - https://photos.google.com/photo/AF1QipNAlzmxlMjfNrjmkaX-crNwqW6FROikASqofkt1
+  - https://photos.google.com/photo/AF1QipOnKHWlZplppqUS5I25TKsGfl7AQISMsKMmBelA
 - Guapea with tap and kick:
   - 'https://photos.google.com/photo/AF1QipNMYuLfY0RfJFi15_ztoGl4Ai0czj_JS8mEFXY0'
 - Titanic:
@@ -350,8 +351,8 @@ Advanced 1:
   - https://photos.google.com/photo/AF1QipMxT4MqyojlU8iKvW2bWJcJAKR_i7Jr4SAvsz1N
 # ======= ADV 2 ==================================================================
 Advanced 2:
-- Togoman v1: [""]
-- Ciego: [https://photos.google.com/photo/AF1QipP5ppxsCvGIxFkXsdUWI04s3GsXLOOnxfz168SW]
+- Togoman v1: [https://photos.google.com/photo/AF1QipMgucdO2Xkf9wgItlEcV8_pOO0Ol5NAz6y-VjyM]
+- Ciego: [https://photos.google.com/photo/AF1QipP5ppxsCvGIxFkXsdUWI04s3GsXLOOnxfz168SW, https://photos.google.com/photo/AF1QipPvEm5AXWFJPv8UFVh2744iLp4AxK2KNLI7doq6]
 - Togoman v2: [https://photos.google.com/photo/AF1QipOeXSbijufJUXnu9zMW9RJeP3O49YStgUo2a-qU]
 - Torremolinas: [https://photos.google.com/photo/AF1QipM0b36G48pGotg_gXxKOZ5w1Pu5lD7-BJ4_pEr7, https://photos.google.com/photo/AF1QipMJHo0NiS71HDlxijnDJBv5UNvdELU8mZfygXFc]
 - Togoman v3: [https://photos.google.com/photo/AF1QipPH4mcoFps9mrHG2oke2fe3YrP0AaWjEIqjSVKm]
@@ -366,6 +367,10 @@ Advanced 3:
 - Alira: [https://photos.google.com/photo/AF1QipNr0YPuN45O1fvExNhfX09PYKAX_Uok_p3DMwHd]
 - Suzy Lu v2: [https://photos.google.com/photo/AF1QipNt71Bv1pZjxxgBakyNjDfwofeE__WJW8JBwQmy]
 - Alira v2: [https://photos.google.com/photo/AF1QipOyMiMFmTa_ED-KILwJTW3aY0a3tmKRuSLFM4Ty]
+- Suzy Lu v3: [https://photos.google.com/photo/AF1QipN2mLXIHq1X_R9TWbQeFU3Kp2s7OUXivD37Fg-G]
+- Easy Butterfly: [https://photos.google.com/photo/AF1QipMYpja7K3L5rusAIlUarY2SbCFcoBYtTDxbVTlX]
+- "" : [""]
+- Panchito: [https://photos.google.com/photo/AF1QipNNMkh8NQH5rHLB5T2AoIN68Kmm4tXZ4NMPC0Vb]
 # ======= ADV 4 ==================================================================
 Advanced 4: []
 # ======= MST 1 ==================================================================
@@ -378,6 +383,8 @@ Master 3: []
 Master 4: []
 # ======= On-2 Club ==============================================================
 On-2 Club:
+- "2023-06-29": ['']
+- "3-1-2 Turn Extended" : [https://photos.google.com/photo/AF1QipP6DOJL1TbRXIFsthgKC0K61LueKHTZvhveAa5W]
 - "2023-06-08": ['']
 - "Double Inside + Double Turn with Scoop": ['https://photos.google.com/photo/AF1QipPg3Hfsg5RV9AIRXVeNulR3UGYqXGhFlqh5eoXv']
 - "2023-06-01": ['']
@@ -509,7 +516,7 @@ Pasitos:
 - Right turn + Hook Turn: ['']
 - side step / el lado: ['']
 - side cross / southern cross / el lado cruzado: ['https://photos.google.com/photo/AF1QipM0LMgpaQ3Z9vPtL6B0cGhO781eLt8xZ1b9tCG1']
-- Suzy Q: ['']
+- Suzy Q: ['https://photos.google.com/photo/AF1QipPO8sbBSvCXXdXl3Uog8-wLmtzsjRSAsATSH6ZM']
 - In-Out Suzy Q: ['']
 - In-Out Step: ['https://photos.google.com/photo/AF1QipPk75t_vxVQQXVY1YDM2ko7uJJDKUr-OnJYmd0p']
 - Suzy Q Lapas: ['']
